<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="ro.twodoors.booknotes.ui.booknotesdetailed.BookNotesDetailedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.booknotesdetailed.BookNotesDetailedFragment">

        <TextView
            android:id="@+id/lblPagesRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pages_read"
            android:layout_margin="@dimen/general_margin_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/seekBarPages"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin_16dp"
            android:paddingStart="@dimen/dimen_2dp"
            android:paddingEnd="@dimen/dimen_2dp"
            android:max="@{viewModel.book.numberOfPages}"
            android:progress="@{viewModel.book.numberOfReadPages}"
            android:thumb="@drawable/custom_thumb"
            android:progressTint="@color/thumb_color"
            app:layout_constraintEnd_toStartOf="@+id/tvPagesRead"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblPagesRead"
            tools:progress="25"/>

        <TextView
            android:id="@+id/tvPagesRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/tvSeparator"
            app:layout_constraintTop_toTopOf="@+id/tvPagesCount"
            app:countPages="@={viewModel.book.numberOfReadPages}"
            tools:text="0" />

        <TextView
            android:id="@+id/tvSeparator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/tvPagesCount"
            app:layout_constraintTop_toTopOf="@+id/tvPagesCount"
            android:text="@string/out_of" />

        <TextView
            android:id="@+id/tvPagesCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin_16dp"
            app:countPages="@{viewModel.book.numberOfPages}"
            tools:text="250"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblPagesRead" />



        <TextView
            android:id="@+id/lblStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:layout_margin="@dimen/general_margin_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBarPages" />

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:textStatus="@={viewModel.book.readingStatus}"
            tools:text="Reading"
            android:drawableEnd="@drawable/ic_arrow_right_24"
            android:layout_margin="@dimen/general_margin_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblStatus" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            style="@style/DividerDetailsStyle"
            app:layout_constraintTop_toBottomOf="@id/txtStatus"/>

        <TextView
            android:id="@+id/lblNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:layout_margin="@dimen/general_margin_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/txtNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bookNotes="@{viewModel.book.bookNotes}"
            tools:text="Add note"
            android:drawableEnd="@drawable/ic_arrow_right_24"
            android:layout_margin="@dimen/general_margin_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblNotes" />

        <Button
            android:id="@+id/btnUpdateBook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/red_favorite"
            android:text="@string/save"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>